--- a/public/static/locales/ru/common.json
+++ b/public/static/locales/ru/common.json
@@ -68,6 +68,8 @@
   "nothing-yet": "Здесь пока ничего нет.",
   "due-date": "Действует до",
   "checkout": "Оплатить",
+  "checkout-success": "Оплачено!",
+  "go-to-profile": "Перейти в профиль",
   "error": "Что-то пошло не так",
   "results": "Результаты"
 }
