fix: Add new admin

--- a/public/static/locales/en/admin.json
+++ b/public/static/locales/en/admin.json
@@ -39,6 +39,8 @@
     }
   },
   "admins": {
+    "your-access": "Your access",
+    "total-admins": "Total admins",
     "admins": "Admins",
     "add-new-admin": "Add new admin",
     "full-access": "Full access",
